# StrictCore

./: ChangeLog.md  LICENSE  README.md  StrictCore.cabal
programs/: Case.hs  List.hs
src/StrictCore/: Lint.hs  Plugin.hs  Simplify.hs  Syntax.hs
